2009-08-22  Glenn Morris  <rgm@gnu.org>

	* hippie-exp.el (he-concat-directory-file-name):
	* lpr.el (lpr-windows-system, printer-name):
	* ls-lisp.el (ls-lisp-emulation, ls-lisp-use-insert-directory-program):
	* ps-print.el (ps-windows-system):
	* startup.el (command-line):
	* emulation/viper-ex.el (viper-glob-function):
	* international/mule-cmds.el (set-language-environment-coding-systems):
	* net/ange-ftp.el (ange-ftp-write-region):
	* obsolete/fast-lock.el (fast-lock-cache-name):
	Remove code for defunct system-types emx, macos, mswindows,
	unisoft-unix, vax-vms, win32, w32.

	* calendar/diary-lib.el (diary-mark-entries-1): Only mark all days of a
	given name if the pattern is not more specific.

	* calendar/lunar.el (lunar-phase-names): New option.
	(lunar-phase): Doc fix.
	(lunar-cycles-per-year): New constant.
	(lunar-index): New function.
	(lunar-phase-list, diary-lunar-phases): Use lunar-index.
	(lunar-phase-name): Use lunar-phase-names.
	(calendar-lunar-phases): Use format.
	(lunar-new-moon-on-or-after): Use lunar-cycles-per-year.

	* progmodes/cperl-mode.el (cperl-imenu-name-and-position):
	Copy imenu-example--name-and-position function here for own use.
	(cperl-xsub-scan): Use cperl-imenu-name-and-position.

	* bs.el (bs--redisplay):
	* cus-edit.el (custom-redraw):
	* ibuffer.el (ibuffer-bury-buffer):
	* server.el (server-goto-line-column):
	* startup.el (command-line-1):
	* strokes.el (strokes-xpm-for-stroke):
	* term.el (term-display-buffer-line):
	* view.el (View-goto-line):
	* calc/calc.el (calc-do, calc-trail-buffer):
	* play/gamegrid.el (gamegrid-add-score-insecure):
	* progmodes/ada-mode.el (ada-compile-goto-error):
	* progmodes/ada-xref.el (ada-xref-find-in-modified-ali):
	(ebrowse-select-1st-to-9nth):
	* progmodes/cperl-mode.el (cperl-time-fontification):
	* progmodes/ebrowse.el (ebrowse-toggle-file-name-display)
	* progmodes/gud.el (gud-display-line):
	(idlwave-shell-display-line):
	* progmodes/idlw-shell.el (idlwave-shell-goto-frame)